--- a/styles.css
+++ b/styles.css
@@ -7,22 +7,25 @@
     display:flex;
     flex-direction:column;
     border:1px solid black;
-    width:15vw;
-    height:20vh;
+    width: 45vw;
+    height:60vh;
 }
 
 .display {
     margin:10px;
     padding:10px;
+    height:6vh;
     text-align: center;
     background-color: darkolivegreen;
+    font-weight:bold;
+    font-size:1.8vw;
 }
 
 .buttonsArea {
     display:flex;
-    gap:2px;
+    gap:15px;
     border:2px solid red;
-    height:18vh;
+    height:54vh;
     width:auto;
     flex-wrap: wrap;
     justify-content: center;
@@ -35,6 +38,7 @@
     background-color:dimgray;
     padding:8px;
     width:20%;
-    height:20%;
-
+    height:15%;
+    font-size:1.7vw;
+    font-weight:900;
 }
